# poetrydev

./: Makefile  README.md  pyproject.toml
src/poetrydev/: __init__.py
tests/: test_app.py
