[tool.poetry]
name = "poetrydev"
version = "0.1.0"
description = ""
authors = ["fcriscuo <genomicdatasci@gmail.com>"]
readme = "README.md"
packages = [{include = "poetrydev", from = "src"}]
homepage = "https://github.com/fcriscuo/poetrydev"
repository = "https://github.com/fcriscuo/poetrydev.git"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
fastapi = "^0.101.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.4.1"


[tool.poetry.group.test.dependencies]
respx = "^0.20.2"
pytest-asyncio = "^0.21.1"
trio = "^0.22.2"

[tool.isort]
profile = "black"

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.10"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider" # deactivating pytest caching.


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
